# dhalls

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  dhalls.cabal
.github/workflows/: haskell.yml
src/: App.hs  Config.hs  Main.hs  Server.hs
