cabal-version:       >=2.0
name:                dhalls
version:             0.1.0.0
synopsis:            Dhall Server
description:         Provides a REST API for Dhall Normalization
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Moritz Clasmeier
maintainer:          mtesseract@silverratio.net
copyright:           Moritz Clasmeier
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable dhalls
  main-is:             Main.hs
  other-modules:       Server
                     , Config
                     , App
  default-extensions:  OverloadedStrings
                     , DeriveGeneric
                     , LambdaCase
                     , TemplateHaskell
  build-depends:       base >=4.12 && <4.14
                     , relude ^>= 0.7
                     , safe-exceptions
                     , servant >= 0.18
                     , servant-server
                     , wai
                     , warp
                     , aeson
                     , aeson-casing >= 0.2.0.0
                     , dhall >= 1.35.0
                     , dhall-json >= 1.7.2
                     , envy >= 2.1.0.0
                     , katip >= 0.8.5
  hs-source-dirs: src
  mixins:   base hiding (Prelude)
          , relude (Relude as Prelude)
  default-language:    Haskell2010
